# twitter-bot-analysis

./: bot_analysis.py  config.json  pyproject.toml
twitter_analysis/: __init__.py  __main__.py
twitter_analysis/analysis/: __init__.py  content.py  sentiment.py  temporal.py
twitter_analysis/config/: __init__.py  logging_config.py  settings.py
twitter_analysis/data/: __init__.py  fetcher.py  processor.py  storage.py
twitter_analysis/models/: __init__.py  analysis_result.py  tweet.py
twitter_analysis/utils/: __init__.py  nlp_utils.py  path_manager.py  rate_limiter.py  validators.py
twitter_analysis/visualization/: __init__.py  content_plots.py  dashboard.py  temporal_plots.py
